config.properties moved to APPDATA for Windows and user.home for Linux